--- a/index.html
+++ b/index.html
@@ -25,63 +25,45 @@
 	
 	
 </head>
-<body class="bp">
-
-
-    <div id="content" >
-    	      	
-    	<div class="modal hide fade in" id="myModal">
-    	  <div class="modal-header">
-    	    <button class="close" data-dismiss="modal">×</button>
-    	    <h3>Modal header</h3>
-    	  </div>
-    	  <div class="modal-body">
-    	    <p>One fine body…</p>
-    	  </div>
-    	  <div class="modal-footer">
-    	    <a href="#" class="btn">Close</a>
-    	    <a href="#" class="btn btn-primary">Save changes</a>
-    	  </div>
-    	</div>
-		<a href="#modal" class="second">Slide to the left.</a>
-
-		<div id="modal"></div>
-      <!-- Main hero unit for a primary marketing message or call to action -->
-      <div class="hero-unit">
-        <h1>Hello, world!</h1>
-        <a class="btn" data-toggle="modal" href="#myModal" >Launch Modal</a>
-      
-        <p>This is a template for a simple marketing or informational website. It includes a large callout called the hero unit and three supporting pieces of content. Use it as a starting point to create something more unique.</p>
-        <p><a class="btn btn-primary btn-large">Learn more &raquo;</a></p>
-      </div>
-	
-      <!-- Example row of columns -->
-      <div class="row">
-        <div class="span4">
-          <h2>Heading</h2>
-           <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
-          <p><a class="btn" href="#">View details &raquo;</a></p>
-        </div>
-        <div class="span4">
-          <h2>Heading</h2>
-           <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
-          <p><a class="btn" href="#">View details &raquo;</a></p>
-       </div>
-        <div class="span4">
-          <h2>Heading</h2>
-          <p>Donec sed odio dui. Cras justo odio, dapibus ac facilisis in, egestas eget quam. Vestibulum id ligula porta felis euismod semper. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus.</p>
-          <p><a class="btn" href="#">View details &raquo;</a></p>
-        </div>
-      </div>
-
-      <hr>
-		
-      <footer>
-        <p>&copy; Company 2012</p>
-      </footer>
-
-    </div> <!-- /container -->
-		
+<body data-spy="scroll" data-target=".subnav" data-offset="0">
+<header id="header">HEADER HEADER HEADER</header>
+<div class="subnav" data-scrollspy="scrollspy">
+	<ul class="nav nav-pills">
+            <li class=""><a href="#events">Events</a></li>
+            <li class=""><a href="#locations">Locations</a></li>
+            <li class=""><a href="#blog">Blog</a></li>
+            <li class=""><a href="#people">People</a></li>
+	</ul>
+</div>
+<div id="wrapper">
+   <section id="main">
+   	<div id="content">
+   		<div id="events">
+   			<a href="#modal" class="second">Slide to the left, and display hidden content from this page in a modal pane.</a>
+   			<a href="#modal" class="first">Slide to the left, and display hidden content from this page in a modal pane.</a>
+   		</div>
+   		<div id="locations"></div>
+   		<div id="blog"></div>
+   		<div id="people"></div>
+   	</section>
+   </div>
+   <section id="sidebar">
+   </section>
+   <div id="modal">
+   		<section class="background"></section>
+   		<section class="content">
+	       <h2>Modal</h2>
+	       <p>This slide uses "modal" option set to "true". When using a modal pageslide, clicking on the main window will not close the window. You must explicitly call <code>$.pageslide.close()</code>.</p>
+	       <p><a href="javascript:$.pageslide.close()">Close</a></p>
+       </section>
+   </div>
+</div>
+<footer id="footer">
+	<div class="wrapper">
+		<button id="open_footer">Open footer</button>
+	</div>
+	FOOTER FOOTER FOOTER
+</footer>
 <script src="js/jquery-1.7.2.min.js"></script>
 <script src="js/bootstrap.js"></script>
 <script src="js/jquery.pageslide.js"></script>
