--- a/index.html
+++ b/index.html
@@ -25,9 +25,9 @@
 	
 	
 </head>
-<body data-spy="scroll" data-target=".subnav" data-offset="0">
+<body data-spy="scroll" data-target=".subnav" data-offset="50">
 <header id="header">HEADER HEADER HEADER</header>
-<div class="subnav" data-scrollspy="scrollspy">
+<div id="menu" class="subnav">
 	<ul class="nav nav-pills">
             <li class=""><a href="#events">Events</a></li>
             <li class=""><a href="#locations">Locations</a></li>
@@ -39,16 +39,85 @@
    <section id="main">
    	<div id="content">
    		<div id="events">
-   			<a href="#modal" class="second">Slide to the left, and display hidden content from this page in a modal pane.</a>
-   			<a href="#modal" class="first">Slide to the left, and display hidden content from this page in a modal pane.</a>
+   			<h1>Here there will be the events</h1>
+   			
+   			<section class="wrapper">
+   				<div class="item"></div>
+   				<div class="item"></div>
+   				<div class="item"></div>
+   				<div class="item"></div>
+   				<div class="item"></div>
+   				<div class="item"></div>
+   				<div class="item"></div>
+   				<div class="item"></div>
+   				<div class="item"></div>
+   				<div class="item"></div>
+   			</section>
+   			<div class="buttons_bar">
+	   			<a href="#modal" class="btn second">Slide to the left</a>
+	   			<a href="#modal" class="btn first">Slide to the left</a>
+	   			<a id="enlarge_events" class="btn" href="#">enlarge</a>
+	   		</div>
    		</div>
-   		<div id="locations"></div>
-   		<div id="blog"></div>
-   		<div id="people"></div>
+   		<div id="locations">
+   			<h1>Here there will be the locations</h1>
+   			<section class="wrapper">
+   				<div class="item"></div>
+   				<div class="item"></div>
+   				<div class="item"></div>
+   				<div class="item"></div>
+   				<div class="item"></div>
+   				<div class="item"></div>
+   				<div class="item"></div>
+   				<div class="item"></div>
+   				<div class="item"></div>
+   				<div class="item"></div>
+   			</section>
+   			<div class="buttons_bar">
+   				<a id="enlarge_locations" class="btn" href="#">enlarge</a>
+   			</div>
+   		</div>
+   		<div id="blog">
+   			<h1>Here there will be the blog</h1>
+   			<section class="wrapper">
+   				<div class="item"></div>
+   				<div class="item"></div>
+   				<div class="item"></div>
+   				<div class="item"></div>
+   				<div class="item"></div>
+   				<div class="item"></div>
+   				<div class="item"></div>
+   				<div class="item"></div>
+   				<div class="item"></div>
+   				<div class="item"></div>
+   			</section>
+   			<div class="buttons_bar">
+   				<a id="enlarge_blog" class="btn" href="#">enlarge</a>
+   			</div>
+   		</div>
+   		<div id="people">
+   			<h1>Here there will be the people</h1>
+   			<section class="wrapper">
+   				<div class="item"></div>
+   				<div class="item"></div>
+   				<div class="item"></div>
+   				<div class="item"></div>
+   				<div class="item"></div>
+   				<div class="item"></div>
+   				<div class="item"></div>
+   				<div class="item"></div>
+   				<div class="item"></div>
+   				<div class="item"></div>
+   			</section>
+   			<div class="buttons_bar">
+   				<a id="enlarge_people" class="btn" href="#">enlarge</a>
+   			</div>
+   		</div>
+   	</section>
+   	<section id="sidebar">
    	</section>
    </div>
-   <section id="sidebar">
-   </section>
+   
    <div id="modal">
    		<section class="background"></section>
    		<section class="content">
@@ -67,6 +136,9 @@
 <script src="js/jquery-1.7.2.min.js"></script>
 <script src="js/bootstrap.js"></script>
 <script src="js/jquery.pageslide.js"></script>
+<script src="js/jquery.scrollto.js"></script>
+<script src="js/jquery.easing.1.3.js"></script>
+<script src="js/jquery.isotope.js"></script>
 <script src="js/script.js"></script>
 </body>
 </html>
